# financial_data_scrapper

./: .gitignore  Dockerfile  README.md  debug.py  docker-compose.yaml  dockerfile.api  pyproject.toml  requirements.txt  selenium-trigger.cloudbuild.yaml  t.py  test-trigger.cloudbuild.yaml
.astro/: config.yaml  docker-compose.override.yaml
api/: main.py  requirements.txt
api/context/: etl.py
api/interfaces/: loader_strat_interface.py
api/utils/: bq_helper.py  config.py  selenium_helper.py  selenium_remote_connection_v2.py
app/: config.yaml  main.py  requirements.txt
app/context/: etl.py
app/utils/: bq_helper.py  config.py  selenium_helper.py  selenium_remote_connection_v2.py
dags/financial_data_scraper/: dag_financial_scraper.py
data/: bloomberg.csv  dolar.csv
financial_data_scraper/: config.yaml  main.py
financial_data_scraper/interfaces/: extractor_strat_interface.py
financial_data_scraper/utils/: bq_helper.py  config.py  selenium_helper.py
include/: airflow_connections.yaml
scripts/: debug.py
src/: config.yaml
src/utils/: config.py
terraform/: main.tf  variables.tf
terraform/artifact_registry/: variables.tf
terraform/cloud_build/: main.tf  variables.tf
terraform/iam/: main.tf  variables.tf
test/: test_bq_helper.py  test_bq_pattern_transform.py  test_config.py  test_extractors.py  test_main.py  test_transformers.py
test/test_utils/: test_bq_helper.py  test_config.py  test_selenuium_helper.py
tests/: test_extractors.py  test_transformers.py
tests/test_context/: test_etl_context.py
tests/test_dags/: dtest_dag_financial_scraper.py
(+41 files in other folders)
