[project]
name = "financial-data-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyaml>=25.1.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "selenium>=4.32.0",
]
