[project]
name = "financial-data-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.33.0",
    "google-cloud-storage>=3.1.0",
    "pandas>=2.2.3",
    "pandas-gbq>=0.29.0",
    "polars>=1.29.0",
    "pyaml>=25.1.0",
    "pyarrow>=20.0.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.32.0",
]


[tool.setuptools]
packages = ["dags", "plugins"]