[project]
name = "financial-data-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "google-cloud-bigquery>=3.33.0",
    "google-cloud-storage>=3.1.0",
    "pandas>=2.2.3",
    "pandas-gbq>=0.29.0",
    "polars>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "pyaml>=25.1.0",
    "pyarrow>=20.0.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "setuptools>=80.7.1",
    "uvicorn>=0.34.2",
]


[tool.setuptools.packages.find]
include = ["financial_data_scrapper*", "app*"]


